# diffonnx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  test.py
.github/workflows/: publish.yml  test-build.yml  test.yml
src/diffonnx/: __init__.py  base.py  cli.py  diff.py  runtime.py  static.py  structs.py  utils.py
src/onnx_diff/: __init__.py  diff.py  structs.py  utils.py
src/onnxdiff/: __init__.py  base.py  cli.py  diff.py  runtime.py  static.py  structs.py  utils.py
test/: common.py  conftest.py  models.py  test_diff.py  test_utils.py
