[project]
name = "onnxdiff"
version = "1.0.0"
description = "Diff your ONNXs"
readme = "README.md"
authors = [{ name = "yuxuan-z", email = "yuxuan-z19@qq.com" }]
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "grakel",
    "numpy>=2.1.2",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "onnxscript>=0.3.2",
    "onnxsim>=0.4.36",
    "tabulate>=0.9.0",
]

[project.scripts]
onnxdiff = "onnxdiff.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [".git*", "test", "uv.lock", "assets"]

[tool.hatch.build.targets.wheel]
packages = ["src/onnxdiff"]
exclude = ["**/__pycache__", "*.pyc", "*.pyo", "*.pyd"]

[tool.uv.sources]
grakel = { git = "https://github.com/yuxuan-z19/GraKeL", branch = "zyx-dev" }

[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-xdist",
    "torch>=2.5.0",
    "onnxruntime-gpu>=1.22.0",
]
local = ["black", "pre-commit"]
